-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 5.0.0
-
None
-
-
e1a69fccb15a87ffc637898cf2248358edb01258 (qt-creator/qt-creator/6.0)
I hava a vimrc config file for Fakevim plugin, there is a `map` command in that file:
noremap <Space>yy "+yy
The source code lines below will delete the command contents :
"+yy
// qt-creator/src/plugins/fakevim/fakevimhandler.cpp // bool FakeVimHandler::Private::handleExSourceCommand(const ExCommand &cmd) // remove comment int i = nextline.lastIndexOf('"'); if (i != -1) nextline = nextline.remove(i, nextline.size() - i);
For Gerrit Dashboard: QTCREATORBUG-26254 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
376509,3 | FakeVim: Only drop full-line comments | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |